--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "disclone",
   "version": "0.1.0",
-  "homepage": "https://mpfthprblmtq.github.io/projects/disclone",
+  "homepage": "https://mpfthprblmtq.github.io/disclone",
   "private": true,
   "dependencies": {
     "@mui/material": "^5.2.6",
@@ -35,7 +35,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
